--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "description": "Hawk admin",
     "version": "0.0.1",
     "repository": "https://github.com/codex-team/hawk.admin.git",
-    "main": "app.js",
+    "main": "src/app.js",
     "license": "MIT",
     "scripts": {
-        "dev": "nodemon ./src/app.js"
+        "dev": "./node_modules/.bin/nodemon ./src/app.js"
     },
     "dependencies": {
         "express": "^4.17.1"
